# Algorithms

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/impl/: ArcGraph.h  ListGraph.h  MatrixGraph.h  SetGraph.h  utils.hpp
src/: ArcGraph.cpp  ListGraph.cpp  MatrixGraph.cpp  SetGraph.cpp  main.cpp
tests/: CMakeLists.txt  GraphAcrCopyTest.cpp  GraphBuildTests.cpp  GraphCopyTest.cpp  GraphListCopyTest.cpp  GraphMatrixCopyTest.cpp  GraphSetCopyTest.cpp  GraphTests.cpp  memtest.sh
